# dataclasses-excel

./: .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml  pytest.ini
src/dataclasses_excel/: __init__.py  __main__.py
src/dataclasses_excel/cli/: __init__.py
tests/: test_cli.py  test_named_ranges.py
tests/data/: test_named_ranges.xlsx
